// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NChip snapshots inactive + active: chip-active 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#E0E5EC",
        "borderRadius": 999,
      },
      {
        "shadowColor": "#FFFFFF",
        "shadowOffset": {
          "height": 2,
          "width": 2,
        },
        "shadowOpacity": 1,
        "shadowRadius": 4,
      },
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 12,
          "paddingVertical": 6,
        },
        undefined,
      ],
    ]
  }
>
  <View
    pointerEvents="none"
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "borderRadius": 999,
        },
        {
          "shadowColor": "#A3B1C6",
          "shadowOffset": {
            "height": -2,
            "width": -2,
          },
          "shadowOpacity": 1,
          "shadowRadius": 4,
        },
      ]
    }
  />
  <Text
    style={
      {
        "color": "#7B8CDE",
        "fontSize": 14,
        "fontWeight": "600",
      }
    }
  >
    tag
  </Text>
</View>
`;

exports[`NChip snapshots inactive + active: chip-inactive 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#E0E5EC",
        "borderRadius": 999,
      },
      {
        "shadowColor": "#A3B1C6",
        "shadowOffset": {
          "height": 2,
          "width": 2,
        },
        "shadowOpacity": 1,
        "shadowRadius": 4,
      },
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 12,
          "paddingVertical": 6,
        },
        undefined,
      ],
    ]
  }
>
  <View
    pointerEvents="none"
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "borderRadius": 999,
        },
        {
          "shadowColor": "#FFFFFF",
          "shadowOffset": {
            "height": -2,
            "width": -2,
          },
          "shadowOpacity": 1,
          "shadowRadius": 4,
        },
      ]
    }
  />
  <Text
    style={
      {
        "color": "#2D3142",
        "fontSize": 14,
        "fontWeight": "500",
      }
    }
  >
    tag
  </Text>
</View>
`;
